<resources>

    <!-- App info -->
    <string name="app_name">QuestApp</string>

    <!-- StartActivity -->
    <string name="start_activity_start_button">Начать</string>
    <string name="start_activity_continue_button">Продолжить</string>
    <string name="start_activity_select_button">Выбрать квест</string>
    <string name="quest_sandwich_title">Выбери действие</string>
    <string name="quest_sandwich_restart">Начать заново</string>
    <string name="quest_sandwich_select">Выбрать другой квест</string>
    <string name="quest_sandwich_exit">Завершить игру</string>
    <string name="gallery_space_button">Полетели</string>
    <string name="gallery_space_description">Кто мог ожидать, что плановый рейс на Альдебаран станет для вас роковым? Вы планировали всего лишь мирно поспать в анабиозе, но в этот раз отдохнуть явно не получится. На борту обнаружена новая форма жизни, которая заблокирует системы обеспечения через 60 минут. Надо поскорее починить космический корабль и благополучно долететь до места назначения.</string>

</resources>
